--- a/frontend/app/templates/components/account-form.hbs
+++ b/frontend/app/templates/components/account-form.hbs
@@ -35,7 +35,8 @@
                 <div class="d-flex col-sm-12">
                   <div class="form-group col-sm-6">
                     <div class="row">
-                      <Input class="form-control " @value={{this.changeset.cleartextPassword}} @name="cleartextPassword" @type="password"/>
+                      <Input  class="form-control mb-10" @value={{this.changeset.cleartextPassword}} @name="cleartextPassword" @type="password"/>
+                      <PasswordStrengthMeter @password={{this.changeset.cleartextPassword}}/>
                     </div>
                   </div>
                   <div class="form-group col-xs-12 col-sm-5 pull-right">
