--- a/frontend/app/templates/components/password-strength-meter.hbs
+++ b/frontend/app/templates/components/password-strength-meter.hbs
@@ -1,1 +1,5 @@
-{{yield}}
+{{t "account.form.passwordStrength"}}
+<div class="progress" >
+  <div class="progress-bar {{progressClass}}" role="progressbar"  aria-valuenow={{this.score}} aria-valuemin="0" aria-valuemax="100">
+  </div>
+</div>
