--- a/frontend/app/templates/components/password-strength-meter.hbs
+++ b/frontend/app/templates/components/password-strength-meter.hbs
@@ -1,4 +1,4 @@
-{{t "account.form.passwordStrength"}}
+{{t "accounts.edit.password_strength"}}
 <div class="progress" >
   <div class="progress-bar {{progressClass}}" role="progressbar"  aria-valuenow={{this.score}} aria-valuemin="0" aria-valuemax="100">
   </div>
