--- a/frontend/app/templates/accounts/edit.hbs
+++ b/frontend/app/templates/accounts/edit.hbs
@@ -1,1 +1,1 @@
-<AccountForm @account={{this.model}} @title={{t "editAccount"}}/>
+<AccountForm @account={{this.model}} @title={{t "accounts.edit.title"}}/>
