--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -47,7 +47,7 @@
                   %li
                     %a.dropdown-item{'href': '#/teams/new', 'data-turbolinks': 'false'} new Team
                   %li
-                    %a.dropdown-item{'href': '#/folders/new', 'data-turbolinks': 'false'} new Folder
+                    %a.dropdown-item{'href': '#/teams/folders/new', 'data-turbolinks': 'false'} new Folder
 
 
   - unless @breadcrumbs.nil?
