Fix search, refs: #54338

--- a/app/assets/javascripts/templates/search/groups_result_entries.hbs.erb
+++ b/app/assets/javascripts/templates/search/groups_result_entries.hbs.erb
@@ -8,7 +8,7 @@ https://github.com/puzzle/cryptopus. }}
     <li class="result-small">
       <div class="result-description">
          <%= image_tag("folder_open.svg", class:"result-type-icon", alt:"Group" ) %>
-         <h1 class="result-title-small">{{name}}</h1>
+         <h1 class="result-title-small">{{attributes.name}}</h1>
       </div>
     </li>
   </a>
