--- a/frontend/app/templates/teams/folders/edit.hbs
+++ b/frontend/app/templates/teams/folders/edit.hbs
@@ -1,1 +1,1 @@
-<FolderForm @folder={{this.model}} @title={{t "folders.forms.editTitle"}}/>
+<FolderForm @folder={{this.model}} @title={{t "folders.edit.title"}}/>
