--- a/frontend/app/templates/teams/folders/new.hbs
+++ b/frontend/app/templates/teams/folders/new.hbs
@@ -1,1 +1,1 @@
-<FolderForm @team={{this.model}} @title={{t "folders.forms.newTitle"}}/>
+<FolderForm @team={{this.model}} @title={{t "folders.new.title"}}/>
