Improve password meter, refs: #54325

--- a/app/webpacker/src/stylesheets/secret_input.scss
+++ b/app/webpacker/src/stylesheets/secret_input.scss
@@ -6,13 +6,12 @@
 //  font from: https://github.com/noppa/text-security
 
 @font-face {
-  font-family: text-security-disc;
-  src: asset-url('text-security-disc.eot');
-  src: asset-url('text-security-disc.eot?#iefix') format('embedded-opentype'),
-    asset-url('text-security-disc.woff2') format('woff2'),
-    asset-url('text-security-disc.woff') format('woff'),
-    asset-url('text-security-disc.ttf') format('truetype'),
-    asset-url('text-security-disc.svg#text-security') format('svg');
+  font-family: "text-security-disc";
+  src: url("~text-security/text-security-disc-compat.eot");
+  src: url("~text-security/text-security-disc-compat.eot?#iefix")
+      format("embedded-opentype"),
+    url("~text-security/text-security-disc.woff2") format("woff2"),
+    url("~text-security/text-security-disc-compat.ttf") format("truetype");
 }
 
 input.secret {
