--- a/frontend/app/templates/components/password-strength-meter.hbs
+++ b/frontend/app/templates/components/password-strength-meter.hbs
@@ -1,5 +1,5 @@
-{{t "accounts.edit.password_strength"}}
+{{t "accounts.edit.password_strength"}}: {{if this.scoreRanking (t (concat "accounts.edit.password_strengths."  this.scoreRanking))}}
 <div class="progress" >
-  <div class="progress-bar {{progressClass}}" role="progressbar"  aria-valuenow={{this.score}} aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar {{progressClass}}" role="progressbar"  aria-valuenow={{this.barWidth}} aria-valuemin="0" aria-valuemax="100">
   </div>
 </div>
