--- a/app/views/session/local/new.html.haml
+++ b/app/views/session/local/new.html.haml
@@ -4,11 +4,11 @@
 -#  https://github.com/puzzle/cryptopus.
 
 .login-form
-  = form_tag(session_root_path, class: 'login') do
+  = form_tag(local_path, class: 'login') do
     %fieldset
       = image_pack_tag "cryptopussy.svg", class: 'logo'
       .form-group
-        = text_field_tag :username, params[:username], id: 'username', placeholder: t(:username), class: 'form-control'
+        = text_field_tag :username, params[:username], id: 'username', value: 'root', class: 'form-control', readonly: true
         = password_field_tag :password, nil, id: 'password', placeholder: t(:password), class: 'form-control'
       = submit_tag t('.submit'), class: 'btn btn-primary'
 .version-info
