Fix search bug due to folder rename

--- a/app/assets/javascripts/templates/search/account_full.hbs.erb
+++ b/app/assets/javascripts/templates/search/account_full.hbs.erb
@@ -12,7 +12,7 @@ https://github.com/puzzle/cryptopus. }}
     <span>
       <a href="/teams/{{attributes.team_id}}">{{attributes.team_name}}</a>
       /
-      <a href="/teams/{{attributes.team_id}}/groups/{{relationships.group.data.id}}">{{attributes.group_name}}</a>
+      <a href="/teams/{{attributes.team_id}}/folders/{{relationships.folder.data.id}}">{{attributes.folder_name}}</a>
     </span>
   </div>
   <br>
