--- a/app/assets/javascripts/templates/search/folders_result_entries.hbs.erb
+++ b/app/assets/javascripts/templates/search/folders_result_entries.hbs.erb
@@ -4,7 +4,7 @@ See the COPYING file at the top-level directory or at
 https://github.com/puzzle/cryptopus. }}
 
 {{#each .}}
-  <a href="/teams/{{team_id}}/folders/{{id}}/accounts">
+  <a href="/teams/{{attributes.team_id}}/folders/{{id}}/accounts">
     <li class="result-small">
       <div class="result-description">
          <%= image_tag("folder_open.svg", class:"result-type-icon", alt:"Folder" ) %>
