--- a/app/assets/javascripts/templates/search/teams_result_entries.hbs.erb
+++ b/app/assets/javascripts/templates/search/teams_result_entries.hbs.erb
@@ -4,7 +4,7 @@ See the COPYING file at the top-level directory or at
 https://github.com/puzzle/cryptopus. }}
 
 {{#each .}}
-  <a href="/teams/{{id}}/folders">
+  <a href="/teams/{{id}}">
     <li class="result-small">
       <div class="result-description">
         <%= image_tag("members.svg", class:"result-type-icon", alt:"Folder" ) %>
