Add team show component, refs: #53709

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -53,6 +53,10 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
   flex-direction: row;
 }
 
+.d-inline {
+  display: inline;
+}
+
 .float-right {
   float: right !important;
 }
