Add team show component, refs: #53709

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -47,7 +47,7 @@
                     %a.dropdown-item{'href': '#/teams/new', 'data-turbolinks': 'false'}
                       = t('teams.new.title')
                   %li
-                    %a.dropdown-item{'href': '#/teams/folders/new', 'data-turbolinks': 'false'}
+                    %a.dropdown-item{'href': '#/folders/new', 'data-turbolinks': 'false'}
                       = t('folders.new.title')
 
 
