--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -37,6 +37,10 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
   border: 1px solid #aaaaaa;
 }
 
+.d-inline {
+  display: inline;
+}
+
 .float-right {
   float: right !important;
 }
@@ -55,6 +59,10 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 
 li a {
   cursor: pointer;
+}
+
+.ml-5 {
+  margin-left: 5%;
 }
 
 /* Validation-errors */
@@ -98,9 +106,9 @@ li a {
   margin-left: 4px;
 }
 
-.info-icon {
-  width: 18px;
-  height: 18px;
+.icon-button {
+  width: 18px !important;
+  height: 18px !important;
   display: inline;
 }
 
