--- a/frontend/app/templates/teams/configure.hbs
+++ b/frontend/app/templates/teams/configure.hbs
@@ -1,1 +1,1 @@
-<TeamMemberConfigure @members={{this.model.members}} @apiUsers={{this.model.apiUsers}} @teamId={{this.model.teamId}}/>
+<TeamMemberConfigure @teamId={{this.model}}/>
