--- a/frontend/app/templates/components/team-member-configure.hbs
+++ b/frontend/app/templates/components/team-member-configure.hbs
@@ -58,7 +58,7 @@
                 </tr>
               </thead>
               <tbody>
-                {{#each @apiUsers as |user|}}
+                {{#each this.apiUsers as |user|}}
                   <tr>
                     <td>{{user.username}}</td>
                     <td>{{user.description}}</td>
