Changes for new icons

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -12,7 +12,7 @@
         %ul.nav.navbar-nav
           - if current_user.auth_db?
             = nav_link t(:change_password), session_show_update_password_path
-          = nav_link image_pack_tag("magnifying-glass.svg", class: "search-icon", title: "search (ctrl + f)") + t('search.title'), search_path
+          = nav_link image_pack_tag("viewmag_white.svg", class: "search-icon", title: "search (ctrl + f)") + t('search.title'), search_path
         %ul.nav.navbar-nav.navbar-right.logout
           - if current_user.admin? || current_user.conf_admin?
             %li.dropdown
