--- a/app/webpacker/src/stylesheets/navbar.scss
+++ b/app/webpacker/src/stylesheets/navbar.scss
@@ -31,16 +31,14 @@
 }
 
 .logout-icon {
-  padding-right: 1px;
-  padding-bottom: 2px;
-  width: 19px;
+  padding: 0px;
+  width: 20px;
   display: inline;
 }
 
 .admin-settings-icon {
-  padding-right: 1px;
-  padding-bottom: 2px;
-  width: 24px;
+  padding: 0px;
+  width: 20px;
   display: inline;
 }
 
