--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -278,3 +278,34 @@ li a {
 .account-detail-key {
   width: 20%;
 }
+
+.nav-side-bar {
+  margin-top: 52px;
+  max-width: 300px;
+}
+
+.just-padding {
+  padding: 15px;
+}
+
+.list-group.list-group-root {
+  padding: 0;
+  overflow: hidden;
+}
+
+.list-group.list-group-root .list-group {
+  margin-bottom: 0;
+}
+
+.list-group.list-group-root .list-group-item {
+  border-radius: 0;
+  border-width: 1px 0 0 0;
+}
+
+.list-group.list-group-root > .list-group-item:first-child {
+  border-top-width: 0;
+}
+
+.list-group.list-group-root > .list-group > .list-group-item {
+  padding-left: 45px;
+}
