--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,4 +1,7 @@
 <NavBar />
+<div class="nav-side-bar">
+  <SideNavBar @teams={{this.model}} />
+</div>
 {{outlet}}
 <div class="main" role="main">
 </div>
