--- a/app/views/recrypt/ldap/new.html.haml
+++ b/app/views/recrypt/ldap/new.html.haml
@@ -4,7 +4,7 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %br/
-= form_tag recryptrequests_recrypt_path do
+= form_tag recrypt_ldap_path do
   .alert.alert-info#ldap_info
     = t 'admin.recryptrequests.uncrypterror.ldap_password_changed'
     %br/
